# android

001/: settings.gradle
001/app/: build.gradle
001/app/src/main/: AndroidManifest.xml
001/app/src/main/res/drawable/: bg_btn2.xml  bg_btn3.xml  bg_btn4.xml  bg_checkbox.xml  bg_et1.xml  bg_radio.xml
001/app/src/main/res/layout/: activity_a.xml  activity_b.xml  activity_button.xml  activity_check_box.xml  activity_container.xml  activity_custom_dialog.xml  activity_data_storage.xml  activity_dialog.xml  activity_edit_text.xml  activity_event.xml  activity_file.xml  activity_gridview.xml  activity_hor_recycler_view.xml  activity_image_view.xml  activity_linear_recycler_view.xml  activity_main.xml  activity_popup_window.xml  activity_progress.xml  activity_pu_recycler_view.xml  activity_radio.xml  activity_recycler_view.xml  activity_shared_preferences.xml  activity_text_view.xml  activity_toast.xml  activity_ui.xml  fragment_a.xml  (+8 more)
001/gradle/wrapper/: gradle-wrapper.properties
NFC/app/: build.gradle
NFC/app/src/main/: AndroidManifest.xml
NFC/gradle/wrapper/: gradle-wrapper.properties
ff001/: settings.gradle
ff001/app/: build.gradle
ff001/app/src/main/: AndroidManifest.xml
ff001/app/src/main/cpp/: CMakeLists.txt  JavaListener.cpp  JavaListener.h  native-lib.cpp
ff001/gradle/wrapper/: gradle-wrapper.properties
ff002/: settings.gradle
ff002/app/: build.gradle
ff002/app/src/main/: AndroidManifest.xml
ff002/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ff002/app/src/main/jni/: native-lib.c
ff002/gradle/wrapper/: gradle-wrapper.properties
(+62 files in other folders)
